--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
   }
 
   body {
@@ -91,7 +92,7 @@
     text-align: center;
     font-size: 20px;
     padding: 20px;
-    margin: 20px auto;
+    margin: 50px auto;
     flex-wrap: wrap;
     display: block;
   }
@@ -104,7 +105,7 @@
     border-radius: 20px;
     line-height: 2;
     font-size: 20px;
-    margin: 20px auto;
+    margin: 50px auto;
     padding: 20px;
     flex-wrap: wrap;
     display: block;
@@ -147,13 +148,13 @@
 
     .contacts {
       width: 80%;
-      margin: 20px auto;
+      margin: 30px auto;
       font-size: 16px;
     }
 
     .activities {
       width: 80%;
-      margin: 20px auto;
+      margin: 30px auto;
       font-size: 16px;
     }
   }
